# fc-mle-test-impl

./: README.md
experimentation/: CAA_test.ipynb  pyproject.toml
vertex-ai/: cloudbuild.yaml
vertex-ai/model/: Dockerfile  pyproject.toml
vertex-ai/model/cluster/serving/: main.py
vertex-ai/model/cluster/training/: config.py  main.py
vertex-ai/model/cluster/training/preprocess/: transformes.py
vertex-ai/model/regression/serving/: main.py
vertex-ai/model/regression/training/: main.py
vertex-ai/model/regression/training/preprocess/: transformes.py
vertex-ai/model/serving/: main.py
vertex-ai/model/utilities/: utils.py
vertex-ai/pipeline/: Dockerfile  pyproject.toml
vertex-ai/pipeline/prediction/: config.py  pipeline.py
vertex-ai/pipeline/training/: config.py  pipeline.py
vertex-ai/pipeline/utilities/: run_pipeline.py
vertex-ai/pipeline/utils/: upload_model.py  utils.py
