[tool.poetry]
name = "experimentation"
version = "0.1.0"
description = "Projecto to solve the mle entrance exam"
authors = ["Mauricio Ochoa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.14.1"
pandas = "^2.2.0"
numpy = "^1.26.3"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
scikit-learn = "^1.4.0"
gap-stat = "^2.0.3"
lightgbm = "^4.3.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
